--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
 	"default_popup": "popup.html"
   },
   "icons": {
+	  "128": "icon.png"
   },
   "description": "",
   "manifest_version": 2,
@@ -14,5 +15,5 @@
   "permissions": [
     "activeTab"
   ],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
