--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,10 @@
   "background": {
 	"scripts": [ "background.js" ]
   },
-  "browser_action": {
-	"default_popup": "popup.html"
+  "page_action": {
+	"default_popup": "popup.html",
+	"default_icon": "icon.png",
+	"show_matches": ["<all_urls>"]
   },
   "icons": {
 	  "128": "icon.png"
@@ -15,5 +17,5 @@
   "permissions": [
     "activeTab"
   ],
-  "version": "1.0.1"
+  "version": "1.0.2"
 }
