--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 	"scripts": [ "background.js" ]
   },
   "page_action": {
+	"default_title": "Quick Access URL Parts",
 	"default_popup": "popup.html",
 	"default_icon": "icon.png",
 	"show_matches": ["<all_urls>"]
@@ -13,9 +14,9 @@
   },
   "description": "",
   "manifest_version": 2,
-  "name": "quick-access-url-parts",
+  "name": "Quick Access URL Parts",
   "permissions": [
     "activeTab"
   ],
-  "version": "1.0.2"
+  "version": "1.0.3"
 }
